use custom column styles for services + industries to allow for changes in various breakpoints, style sup for all breakpoints, move large breakpoint to 1500px to avoid arrow overlap, keep lines + columns from wrapping

--- a/assets/styles/pages/_work.scss
+++ b/assets/styles/pages/_work.scss
@@ -11,6 +11,10 @@ body.page-work {
     height: calc(100% - #{$header-sm});
     border-left: 5px solid color('white');
     border-right: 5px solid color('white');
+    .col-services,
+    .col-industries {
+      flex: 0 1 100%;
+    }
 
     .industries-nav,
     .services-nav {
@@ -27,6 +31,7 @@ body.page-work {
       }
 
       a {
+        white-space: nowrap;
         display: inline-block;
         position: relative;
         padding-right: 12px;
@@ -39,20 +44,21 @@ body.page-work {
     }
     .services-nav {
        a {
-        @include h1-sans;
+        @include paragraph-style(32, 40, 0.01em);
 
         sup {
           display: inline-block;
           font: bold 12px/1 $font-sans, sans-serif;
           vertical-align: top;
-          margin: 1.5em 0 0 -.25em;
+          margin: 1.5em 0 0 -0.25em;
         }
 
         svg {
           display: none;
         }
 
-        @include media-nav {
+        @include media-md {
+          @include paragraph-style(64, 64, 0.01em);
           svg {
             opacity: 0;
             width: 88px;
@@ -61,6 +67,9 @@ body.page-work {
             display: inline-block;
             vertical-align: middle;
           }
+          sup {
+            margin: 1.5em 0 0 -1em;
+          }
 
           &:hover {
             svg {
@@ -68,6 +77,18 @@ body.page-work {
               animation: puls0r 0.4s linear infinite;
               opacity: 1;
             }
+          }
+        }
+        @include media-nav {
+        }
+        @include min-screen(1500px) {
+          @include paragraph-style(96, 105.6, 0.01em);
+          svg {
+            width: 175px;
+            height: 100px;
+          }
+          sup {
+            margin-left: -2em;
           }
         }
       }
@@ -83,6 +104,20 @@ body.page-work {
       }
     }
 
+    @include media-md {
+      .grid {
+        flex-wrap: nowrap;
+      }
+      .col-services {
+        flex: 0 1 60%;
+        max-width: 60%
+      }
+      .col-industries {
+        flex: 0 1 40%;
+        max-width: 40%;
+      }
+    }
+
     @include media-nav {
       width: auto;
       border: none;
@@ -94,16 +129,6 @@ body.page-work {
       .close-modal {
         right: beat(3);
         top: beat(3);
-      }
-
-      .industries-nav {
-        float: left;
-      }
-      .services-nav {
-        float: left;
-        a sup {
-          margin-left: -2em;
-        }
       }
     }
   }
